ansible/k8s/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web

spec:
  replicas: 1

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: web

spec:
  type: NodePort

  selector:
    app: web

  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
